--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
     "@craco/craco": "^6.4.3",
     "@emotion/eslint-plugin": "^11.7.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.0",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.27.2",
+    "babel-jest": "^28.1.0",
     "eslint-import-resolver-typescript": "^2.7.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -25,16 +28,18 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
+    "redux-saga-test-plan": "^4.0.5",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "ts-jest": "^28.0.2",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
